--- a/iot-smarthome/package.json
+++ b/iot-smarthome/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.7",
     "@mui/material": "^6.1.7",
+    "@sendgrid/mail": "^8.1.4",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -15,6 +16,8 @@
     "chartjs-plugin-zoom": "^2.1.0",
     "date-fns": "^4.1.0",
     "firebase": "^11.0.2",
+    "firebase-admin": "^12.7.0",
+    "firebase-functions": "^6.1.0",
     "nodemailer": "^6.9.16",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
